--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.discord4j:Discord4J:2.10.1"
+    compile "com.googlecode.json-simple:json-simple:1.1.1"
 }
