--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.discord4j:Discord4J:2.10.1"
     compile "com.googlecode.json-simple:json-simple:1.1.1"
+    compile "com.google.code.gson:gson:2.8.1"
+    compile 'com.google.cloud:google-cloud-dialogflow:0.46.0-alpha'
+    compile 'com.google.apis:google-api-services-oauth2:v1-rev139-1.23.0'
 }
