--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,6 @@ dependencies {
     compile "com.google.code.gson:gson:2.8.1"
     compile 'com.google.cloud:google-cloud-dialogflow:0.46.0-alpha'
     compile 'com.google.apis:google-api-services-oauth2:v1-rev139-1.23.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    compile 'com.sedmelluq:lavaplayer:1.3.7'
 }
